# B.-Pre-processing-Quality-Filters-

./: .gitignore  Copy_of_Welcome_to_Colab.ipynb  README.md  app.py  ci.yml  classification.py  cli.py  corrections.py  filters.py  ingestion.py  main.py  pipeline.py  pyproject.toml  requirements.txt  settings.py  test_import.py  utils.py
