[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-ingestion"
version = "0.1.0"
description = "Pre-processing, Quality Filters & Classification for GenAI data ingestion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "opencv-python-headless>=4.8",
  "pillow>=10.0",
  "mutagen>=1.47",
  "librosa>=0.10",
  "soundfile>=0.12"
]

[project.urls]
homepage = "https://github.com/your-user/genai-ingestion"
repository = "https://github.com/your-user/genai-ingestion"

[project.scripts]
genai-ingest = "genai_ingestion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
